--- a/index.html
+++ b/index.html
@@ -83,12 +83,33 @@ button:hover{
 background: background: rgb(250,248,248);
 background: linear-gradient(167deg, rgba(250,248,248,1) 0%, rgba(250,64,64,0.7424593967517401) 100%);
 }
+   p.estilo{
+    font-size: 20px;
+    text-align: center;
+     background:background: rgb(250,248,248);
+background: background: rgb(250,248,248);
+background: linear-gradient(167deg, rgba(250,248,248,1) 0%, rgba(250,64,64,0.7424593967517401) 100%);
+margin: 40px;
+
+}
+p.titulo{
+    text-align: center;
+    font-size: 40px;
+    font-style: italic;
+     background:background: rgb(250,248,248);
+background: rgb(250,248,248);
+background: linear-gradient(167deg, rgba(250,248,248,1) 0%, rgba(215,27,27,0.11368909512761016) 100%);
+}
+
 
 </style>
 
 </head>
 <body>
-    
+     <p class="titulo"> Lotería OAL</p>
+    <p class="estilo"><span style="color: red; font-size:15px">¡AVISO! </span>Éste programa ya tiene introducidos los números que juega el OAL. Por lo tanto NO escribas tu número.
+    Introduce SOLO los premios que vayan cantando los niños y así sabrás si alguno de los tuyos han sido premiados.</p>
+
   <div id="container">
     <h2>Comprobador de Lotería</h2>
 
